# SpikeformerMyoLeap

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  collection_controller.py  collection_gui.py  evaluate.py  leap_myo_data_collection.py  live_inference.py  local_visualizer.py  preprocess_dataset.py  pyproject.toml  replay_dataset.py  rerun_viewer.py  setup_env.sh  train.py  visualize_leap.py  visualize_myo.py
assets/prosthetics/: README.md
conf/: config.yaml
docs/: CBS_2026_PLAN.md  PROJECT_SUMMARY.md  RESEARCH.md
docs/media/: leap-visualizer.webm
experiments/cbs_2026/: .gitignore  PHASE_TRACKER.md  README.md  common.sh  phase1_representation_transformer.sh  phase2_architecture_cnn.sh  phase2_architecture_cnn_lstm.sh  phase2_architecture_spikeformer.sh  phase2_architecture_spiking_cnn.sh  phase2_architecture_transformer.sh  run_cnn_ablation.sh  run_cnn_lstm_ablation.sh  run_spikeformer_ablation.sh
src/spikeformer_myo_leap/: __init__.py
src/spikeformer_myo_leap/app/: __init__.py  collection_gui.py  dataset_reviewer.py
src/spikeformer_myo_leap/collection/: __init__.py  controller.py  terminal.py  worker.py
src/spikeformer_myo_leap/config/: README.md  __init__.py  inference.py  preprocessing.py  reviewer.py
src/spikeformer_myo_leap/data/: README.md  __init__.py  contracts.py  io.py  loaders.py  manifest.py  preprocessing.py  raw.py  transforms.py
src/spikeformer_myo_leap/inference/: __init__.py  articulation.py  live.py  prosthetics.py  simulator.py
src/spikeformer_myo_leap/models/: README.md  __init__.py  cnn.py  cnn_lstm.py  registry.py  (+3 more)
(+42 files in other folders)
