[project]
name = "spikeformer-myo-leap"
version = "0.1.0"
description = "V2 Data Collection for SpikeFormerMyo via Leap Motion and Myo Armband"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyomyo",
    "pyserial",
    "numpy",
    "pandas",
    "torch",
    "tqdm",
    "scikit-learn",
    "spikingjelly",
    "matplotlib",
    "PySide6",
    "rerun-sdk",
    "hydra-core",
    "mujoco>=3.6.0",
    "cupy-cuda12x>=14.0.1",
    "tensorboard>=2.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
